<resources>

    <string name="app_name">expandablelist</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_expandablelist">ExpandablelistActivity</string>

	<string name="estimated_passed_subjects">Εκτιμώμενος αριθμός περασμένων μαθημάτων:</string>
    <string name="estimated_average">Εκτιμώμενος μέσος όρος για αυτά:</string>
    <string name="compute">Υπολογισμός</string>
    <string name="guide_for_grades">Εισάγετε τους βαθμούς που επιθυμείτε, κάνοντας χρήση του κουμπιού &quot;Επόμενος Βαθμός&quot;. Όταν θέλετε να υπολογιστεί ο νέος μέσος όρος σας, με βάση τους εισαχθέντες βαθμούς, πατήστε \&quot;Τέλος\&quot;</string>
    <string name="vathmos">Βαθμός:</string>
    <string name="next_grade">Επόμενος βαθμός</string>
    <string name="end_of_grades">Τέλος</string>
    <string name="wanna_get_grade">επιθυμητό μέσο όρο</string>
    <string name="desired_avg">Επιθυμητός ΜΟ :</string>
    <string name="include_thesis_question">Διπλωματική</string>
    <string name="determined_grade_string">Παρακάτω εισάγετε το μέσο όρο στον οποίο θέλετε να φτάσετε, καθώς επίσης και τον εκτιμώμενο βαθμό της διπλωματικής σας</string>
    <string name="clear">Καθαρισμός</string>
    
</resources>